update openapi.json and refactor project
