# openapi.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.1",
   "components": {},
   "info": {
     "title": "test_task",
@@ -39,7 +39,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "list",
+                  "type": "object",
                   "example": {
                     "status": "success",
                     "data": [
@@ -72,7 +72,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "dict",
+                  "type": "object",
                   "example": {
                     "status": "failure",
                     "message": "ERROR_MESSAGE"
@@ -93,7 +93,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "dict",
+                  "type": "object",
                   "example": {
                     "status": "success",
                     "data": {
@@ -112,7 +112,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "dict",
+                  "type": "object",
                   "example": {
                     "status": "failure",
                     "message": "ID=444 does not exist"
@@ -126,7 +126,54 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "dict",
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "ERROR_MESSAGE"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete a limit record from the table",
+        "responses": {
+          "200": {
+            "description": "Successfully deleted limit record",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "message": "limit of id=4 deleted"
+                  }
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "Failure to delete limit record possibly due to non-existent ID",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "limit of id=444 does not exist"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "A failure to delete limit record due to unknown error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
                   "example": {
                     "status": "failure",
                     "message": "ERROR_MESSAGE"
@@ -143,8 +190,295 @@
           "description": "ID to get limit record of",
           "in": "path",
           "required": true,
-          "examples": {
-            "value": [1, 2, 3]
+          "schema": {
+            "type": "integer"
+          },
+          "example": 1
+        }
+      ]
+    },
+    "/limits?id={id}&cur={currency}&country={country}&max_limit={max_limit}": {
+      "post": {
+        "description": "Posting a new limit record",
+        "responses": {
+          "200": {
+            "description": "A new limit record",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "message": "limits updated",
+                    "result": {
+                      "ID": 4,
+                      "COUNTRY": "RUS",
+                      "CUR": "RUB",
+                      "MAX_LIMIT": 5000.0
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "Failure to post new record due to incorrect inputs",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "limits not updated",
+                    "result": {
+                      "failure": "Failed to update limits. Please, check your input"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Failure to post new record due to unknown error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "ERROR_MESSAGE"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "description": "Updating an existent limit record in the table",
+        "responses": {
+          "200": {
+            "description": "Limit record successfully updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "message": "limits updated",
+                    "result": {
+                      "ID": 4,
+                      "COUNTRY": "RUS",
+                      "CUR": "RUB",
+                      "MAX_LIMIT": 5000.0
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "Failure to update record due to incorrect inputs",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "limits not updated",
+                    "result": "check inputs"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Failure to update record due to unknown error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "ERROR_MESSAGE"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "parameters": [
+        {
+          "name": "id",
+          "description": "ID of the limit record (new or subject to update)",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "integer"
+          },
+          "example": 4
+        },
+        {
+          "name": "currency",
+          "description": "Currency of the limit record (new or subject to update)",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string",
+            "enum": [
+              "RUB", "USD", "EUR"
+            ]
+          }
+        },
+        {
+          "name": "country",
+          "description": "Country of the limit record (new or subject to update)",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string",
+            "enum": [
+              "RUS", "AUS", "ABH"
+            ]
+          }
+        },
+        {
+          "name": "max_limit",
+          "description": "Maximum limit of the limit record in corresponding currency (new or subject to update)",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "number",
+            "example": 3000
+          }
+        }
+      ]
+    },
+    "/history?id={id}&cur={currency}&country={country}&amount={amount}&date={date}": {
+      "post": {
+        "description": "Posting a new history record",
+        "responses": {
+          "200": {
+            "description": "A new history record",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "message": "history updated",
+                    "result": {
+                      "message": "history successfully updated"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failure to post new history record due to incorrect amount",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                      "status": "failure",
+                      "message": "history not updated",
+                      "result": {
+                          "failure": "Sum within a current month (7001420.0 rub) exceeds max_limit (3000.0 rub)"
+                      }
+                  }
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "Failure to post new history record due to incorrect input",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                      "status": "failure",
+                      "message": "history not updated",
+                      "result": {
+                          "failure": "Failed to update history. Please, check your inputs"
+                      }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Failure to post new history record due to unknown error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "failure",
+                    "message": "ERROR_MESSAGE"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "parameters": [
+        {
+          "name": "id",
+          "description": "ID of the new history record",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "integer"
+          },
+          "example": 4
+        },
+        {
+          "name": "currency",
+          "description": "Currency of the new history record",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string",
+            "enum": [
+              "RUB", "USD", "EUR"
+            ]
+          }
+        },
+        {
+          "name": "country",
+          "description": "Country of the new history record",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string",
+            "enum": [
+              "RUS", "AUS", "ABH"
+            ]
+          }
+        },
+        {
+          "name": "amount",
+          "description": "Amount of the new history record in corresponding currency",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "number",
+            "example": 3000
+          }
+        },
+        {
+          "name": "date",
+          "description": "Date of the new history record in format %Y-%m-%dT%H:%M:%S (or use 'now' for posting current time)",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string",
+            "example": "2021-12-12T12:12:12"
           }
         }
       ]
